// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Progress basic 1`] = `
.c0 {
  position: relative;
  overflow: hidden;
  height: 4px;
  background-color: #dedede;
}

.c1 {
  width: 100%;
  -webkit-transform-origin: left;
  -ms-transform-origin: left;
  transform-origin: left;
  position: absolute;
  left: 0;
  top: 0;
  bottom: 0;
  background: linear-gradient( to right, #dedede 0%, #0078d4 50%, #dedede 100% );
  -webkit-animation: fjEpQY 2.6s infinite;
  animation: fjEpQY 2.6s infinite;
}

<div
  className="c0"
>
  <div
    className="c1"
    style={Object {}}
  />
</div>
`;

exports[`Progress prop value 1`] = `
.c0 {
  position: relative;
  overflow: hidden;
  height: 4px;
  background-color: #dedede;
}

.c1 {
  width: 100%;
  -webkit-transform-origin: left;
  -ms-transform-origin: left;
  transform-origin: left;
  position: absolute;
  left: 0;
  top: 0;
  bottom: 0;
  background: #0078d4;
  -webkit-transition: -webkit-transform 0.43s linear;
  -webkit-transition: transform 0.43s linear;
  transition: transform 0.43s linear;
}

<div
  className="c0"
>
  <div
    className="c1"
    style={
      Object {
        "transform": "translateX(-50%)",
      }
    }
  />
</div>
`;
